fix: overlapping text

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
     .container{
-        height: 350px;
+        height: 500px;
         display: flex;
         justify-content: space-around;
         align-items: center;
